cmake_minimum_required(VERSION 3.12)
project(codeforces_cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(codeforces_cpp a2oj/div2B/Problem1.cpp a2oj/div2B/Problem2.cpp a2oj/div2B/Problem3.cpp a2oj/div2B/Problem4.cpp a2oj/div2B/Problem5.cpp a2oj/div2B/Problem6.cpp a2oj/div2B/Problem7.cpp a2oj/div2B/Problem8.cpp a2oj/div2B/Problem9.cpp a2oj/div2B/Problem10.cpp a2oj/div2B/Problem11.cpp a2oj/div2B/Problem12.cpp a2oj/div2B/Problem13.cpp a2oj/div2B/Problem14.cpp a2oj/div2B/Problem15.cpp a2oj/div2B/Problem16.cpp a2oj/div2B/Problem17.cpp)